--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Tic-Tac-Toe</h1>
+
+    </header>
+    <div class="container">
+        <div class="announce">
+            Player X's Turn
+        </div>
+        <div class="board">
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+            <div class="tile"></div>
+        </div>
+        <button type="button" id="reset">Reset</button>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
